[tool.poetry]
name = "django-jwt-project"
version = "0.1.0"
description = ""
authors = ["Rajith Kumar <rajithkumar012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
django-redis = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.10.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"[tool.poetry]
name = "django-jwt-project"
version = "0.1.0"
description = ""
authors = ["rajithkumar012 <rajithkumar012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.10.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
